# RayTracing

./: .gitignore  CMakeLists.txt  README.md  input.in  main.cpp
figures/: figure.hpp  plane.hpp  point.hpp  triangle.cpp  vector3d.cpp  vector3d.hpp
geo/: aabb.cpp  aabb.hpp  line.cpp  line.hpp  matrix.cpp  matrix.hpp  plane.cpp  plane.hpp  point.cpp  point.hpp  section.cpp  section.hpp  vector3d.cpp  vector3d.hpp
polygon/: chunk_triangle.cpp  chunk_triangle.hpp  figure.hpp  plane.cpp  plane.hpp  polygon.cpp  polygon.hpp  triangle.cpp  triangle.hpp
scene/: bsp_tree.cpp  bsp_tree.hpp  polygon.hpp
tests/: run_test.py  test_aabb.hpp  test_bsp.hpp  test_e2e.hpp  test_interception.hpp  test_main.cpp  test_vector.hpp  tests.hpp
tests/validation/: geogebra-export_1.ggb  geogebra-export_2.ggb  geogebra-export_3.ggb  geogebra-export_4.ggb  geogebra-export_5.ggb  geogebra-export_6.ggb  geogebra-export_7.ggb  geogebra-export_8.ggb  geogebra-export_9.ggb  input_rand1.in  input_rand2.in  input_rand3.in  input_rand4.in  input_rand5.in  input_rand6.in  input_rand7.in  input_rand8.in  input_rand9.in  manual_check5.txt  manual_check6.txt  manual_check7.txt  manual_check8.txt  manual_check9.txt
